--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -10,86 +10,37 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 5rem;
 }
 
-.cardContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
+.sectionContainer {
   width: 100%;
-  max-width: 400px;
-  padding: 2rem 1rem;
+  height: 40vh;
+  position: relative;
+  overflow: hidden;
 }
 
-@media (max-width: 600px) {
-  .main {
-    gap: 1.5rem;
-  }
-}
-
-@media (max-width: 480px) {
-  .cardContainer {
-    gap: 1.5rem;
-  }
+.background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .writing {
+  position: relative;
+  z-index: 1;
   margin: 1rem;
-  position: -webkit-sticky;
-  position: sticky;
 }
 
-.concept,
-.casts,
-.venue,
-.timeTable,
-.movies,
-.history {
-  background-size: cover;
-  background-position: top 30% center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  margin-top: 5rem;
-  width: 100%;
-  height: 50vh;
-}
-
-.concept {
-  background-image: url(../../public/concept.jpg);
-  position: relative;
-}
-
-.casts {
-  background-image: url(../../public/casts.jpg);
-  position: relative;
-}
-
-.venue {
-  background-image: url(../../public/venue.jpg);
-  position: relative;
-}
-
-.timeTable {
-  background-image: url(../../public/concept.jpg);
-  position: relative;
-}
-
-.movies {
-  background-image: url(../../public/concept.jpg);
-  position: relative;
-}
-
-.history {
-  background-image: url(../../public/concept.jpg);
-  position: relative;
-}
-
-.buttonContainer {
+.detailButton {
   position: absolute;
   bottom: 0;
   right: 0;
   padding: 1rem;
+  z-index: 1;
 }
 
 .entryButtonContainer {
