--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,3 +47,23 @@ a {
     color-scheme: dark;
   }
 }
+
+h1 {
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+h2 {
+  font-size: 1.5rem;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 100;
+}
