--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -23,25 +23,7 @@
 }
 
 .logo {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.ne {
-  font-size: 2rem;
-  font-weight: 400;
-  color: #000;
-  text-shadow: 0 0 5px #ffffff;
-  margin-right: -20px;
-  z-index: 200;
-}
-
-.o {
-  font-size: 2.6rem;
-  margin-left: -20px;
-  z-index: 150;
+  padding: 0.3rem;
 }
 
 .menuButton {
