--- a/src/components/HomeLogo.module.css
+++ b/src/components/HomeLogo.module.css
@@ -40,7 +40,6 @@
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
   font-size: 3.75rem;
   font-weight: bold;
 }
@@ -49,7 +48,14 @@
   position: absolute;
   top: 60px;
   left: 43%;
-  transform: translateX(-50%);
   font-size: 1.5rem;
+  white-space: nowrap;
+}
+
+.description {
+  position: absolute;
+  top: 100px;
+  left: 24%;
+  font-size: 1rem;
   white-space: nowrap;
 }
