--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -44,5 +44,13 @@
 }
 
 .entryButtonContainer {
-  margin: 10rem 0;
+  margin: 10rem 0 0 0;
+}
+
+.audienceButtonContainer {
+  margin: 0 0 5rem 0;
+}
+
+.prelimButtonContainer {
+  margin: 2rem 0 5rem 0;
 }
