Reactコンポーネントのpropsをソートルールに従って整理

--- a/src/app/entry/entry.module.css
+++ b/src/app/entry/entry.module.css
@@ -16,7 +16,7 @@
 
 .heading {
   font-size: 4rem;
-  font-family: "din-1451-lt-pro-engschrift", sans-serif;
+  font-family: 'din-1451-lt-pro-engschrift', sans-serif;
   color: #fff;
   text-align: center;
   margin-bottom: 2rem;
