--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,13 +18,7 @@ body {
 
 body {
   color: var(--foreground);
-  background: linear-gradient(
-    180deg,
-    #000000 0%,
-    #130000 20%,
-    #7f100d 88%,
-    #000000 97%
-  );
+  background: linear-gradient(180deg, #000000 0%, #130000 20%, #7f100d 88%, #000000 97%);
   /* min-height: 100vh; */
   font-family: var(--font-zen-antique);
   -webkit-font-smoothing: antialiased;
