--- a/src/components/test.css
+++ b/src/components/test.css
@@ -11,81 +11,81 @@
 }
 @-moz-keyframes squiggly-anim {
   0% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
   20% {
-    filter: url("#squiggly-1");
+    filter: url('#squiggly-1');
   }
   40% {
-    filter: url("#squiggly-2");
+    filter: url('#squiggly-2');
   }
   60% {
-    filter: url("#squiggly-3");
+    filter: url('#squiggly-3');
   }
   80% {
-    filter: url("#squiggly-4");
+    filter: url('#squiggly-4');
   }
   100% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
 }
 @-webkit-keyframes squiggly-anim {
   0% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
   20% {
-    filter: url("#squiggly-1");
+    filter: url('#squiggly-1');
   }
   40% {
-    filter: url("#squiggly-2");
+    filter: url('#squiggly-2');
   }
   60% {
-    filter: url("#squiggly-3");
+    filter: url('#squiggly-3');
   }
   80% {
-    filter: url("#squiggly-4");
+    filter: url('#squiggly-4');
   }
   100% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
 }
 @-o-keyframes squiggly-anim {
   0% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
   20% {
-    filter: url("#squiggly-1");
+    filter: url('#squiggly-1');
   }
   40% {
-    filter: url("#squiggly-2");
+    filter: url('#squiggly-2');
   }
   60% {
-    filter: url("#squiggly-3");
+    filter: url('#squiggly-3');
   }
   80% {
-    filter: url("#squiggly-4");
+    filter: url('#squiggly-4');
   }
   100% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
 }
 @keyframes squiggly-anim {
   0% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
   20% {
-    filter: url("#squiggly-1");
+    filter: url('#squiggly-1');
   }
   40% {
-    filter: url("#squiggly-2");
+    filter: url('#squiggly-2');
   }
   60% {
-    filter: url("#squiggly-3");
+    filter: url('#squiggly-3');
   }
   80% {
-    filter: url("#squiggly-4");
+    filter: url('#squiggly-4');
   }
   100% {
-    filter: url("#squiggly-0");
+    filter: url('#squiggly-0');
   }
 }
