コンセプトページを実装し、画像とメッセージを追加
- コンセプトページのレイアウトとスタイルを作成
- 運営陣のメッセージとプロフィール画像を追加
- イベントのコンセプトと目的を明確化
- 一部のテキストと画像を更新

--- a/src/app/prelim/Prelim.module.css
+++ b/src/app/prelim/Prelim.module.css
@@ -18,7 +18,6 @@
 }
 
 .judgeCard {
-  text-align: center;
 }
 
 .judgeImage {
@@ -33,6 +32,7 @@
 
 .judgeRep {
   font-size: 0.7rem;
+  max-width: 150px;
 }
 
 .judgeName {
@@ -41,13 +41,13 @@
 }
 
 .judgesSection {
-  margin: 4rem 0;
+  margin: 4rem 0 0 0;
   text-align: center;
 }
 
 .judgesHeading {
   font-size: 2rem;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   font-weight: bold;
 }
 
