--- a/src/app/page.shared.module.css
+++ b/src/app/page.shared.module.css
@@ -53,3 +53,34 @@
     font-size: 1.5rem;
   }
 }
+
+.subHeading {
+  font-size: 1.5rem;
+  color: #fff;
+  text-align: center;
+  margin-bottom: 1.5rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.ruleSection {
+  margin-bottom: 1.5rem;
+}
+
+.ruleHeading {
+  font-size: 1.2rem;
+  color: #fff;
+  margin-bottom: 0.75rem;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.highlight {
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.entryButtonContainer {
+  display: flex;
+  justify-content: center;
+  margin: 2rem 0;
+  width: 100%;
+}
